// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullPost /> snapshots displays blank full post when title and body are empty 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#000",
      "paddingHorizontal": 20,
    }
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFA69E",
            "paddingTop": 10,
          }
        }
      >
        &lt;
         Return to List of Posts
      </Text>
    </View>
    <View>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#A5FFD6",
            "fontSize": 24,
            "fontWeight": "bold",
            "paddingBottom": 15,
            "paddingTop": 20,
          }
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexWrap": "wrap",
            "opacity": 1,
            "paddingHorizontal": 10,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`<FullPost /> snapshots displays title and full post sans markdown characters 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#000",
      "paddingHorizontal": 20,
    }
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFA69E",
            "paddingTop": 10,
          }
        }
      >
        &lt;
         Return to List of Posts
      </Text>
    </View>
    <View>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#A5FFD6",
            "fontSize": 24,
            "fontWeight": "bold",
            "paddingBottom": 15,
            "paddingTop": 20,
          }
        }
      >
        curly fries
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexWrap": "wrap",
            "opacity": 1,
            "paddingHorizontal": 10,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginBottom": 10,
              "marginTop": 10,
              "width": "100%",
            }
          }
        >
          <Text
            style={Object {}}
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFF",
                    "fontSize": 14,
                  },
                  Object {},
                ]
              }
            >
              #seasoned ##with ranch dipping sauce
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
